feat: modal de carteiras adaptado do backend para a dashboard